# noticer-app

./: .gitignore  README.md  frontend-froala.js  frontend-summernote.js  frontend.js  package.json  pnpm-lock.yaml  serve_notes.py  serve_notes_v2.py  ui.html
app/: .gitignore  .prettierrc  README.md  capacitor.config.ts  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json
app/assets/css/: froala-editor@4.5.2.min.css
app/composables/: useFileOperations.ts
app/pages/: index.vue
app/pages/note/: [...path].vue
app/server/api/: notes.get.ts  upload-image.post.ts
app/server/api/images/: [...path].delete.ts
app/server/api/notes/: [...path].get.ts  [...path].post.ts  [...path].put.ts
app/server/utils/: logging.ts
app/utils/: logging.ts
public/: summernote.js
src/: alpine.js  index.html  main.js  styles-jodit.css  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: android.json  default.json
src-tauri/src/: lib.rs  main.rs
src/js/: contextMenu.js  editor-jodit.js  editor-tinymce.js  editor.js  file.js  files.js  log.js  plugin-android-fs.js  prompt.js
src/public/tinymce/themes/silver/: theme.min.js
web/: .python-version  frontend-froala.js  serve_notes_v2.py
