[package]
name = "ntcr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ntcr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# tauri plugins use forked repo in order to add directory picker functionality to android.
# once the official plugin has this implemented, this fork must be replaced with the official version.

# tauri-plugin-dialog = "2"
tauri-plugin-dialog = { git = "https://github.com/the-human-guy/plugins-workspace.git", branch = "v2", package = "tauri-plugin-dialog" }
# tauri-plugin-fs = "2"
tauri-plugin-fs = { git = "https://github.com/the-human-guy/plugins-workspace.git", branch = "v2", package = "tauri-plugin-fs" }


